# blockscout-verkle-tree

./: .gitignore  Cargo.toml  README.md  condrieu.block462198.rlp  example_config.toml
.github/workflows/: test.yml
src/: cli.rs  config.rs  lib.rs  main.rs  server.rs  types.rs
src/dot/: from_hint.rs  mod.rs
src/verkle/: algorithm.rs  keyvals.rs  mod.rs  proof.rs
src/verkle/keyvals/: mod.rs
src/verkle/proof/: mod.rs
